--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "ipfs-http-client": "^60.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "web3": "^4.3.0"
   },
